--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -1,13 +1,15 @@
 $odecopack-color_1 = #ed6b00
 $odecopack-color_2 = #211915
-$odecopack-color_3 = #ECEDEF
+$odecopack-color_3 = white
 $odecopack-color_4 = #5B5B5F
+$odecopack-color_5 = #ECEDEF
 
 body
   background-color $odecopack-color_3
 
 .color-1-odecopack
   background-color $odecopack-color_1 !important
+  color white !important
 
 .color-2-odecopack
   background-color $odecopack-color_2 !important
@@ -102,9 +104,7 @@ footer
         height 100%
         background-color white
         color black
-        border 1px solid $odecopack-color_3
-        padding-top 3rem
-        padding-bottom 3rem
+        border 1px solid $odecopack-color_5
       .contenido:hover
         border none
         background-image url("../img/fondo_botones_hover.jpg")
