--- a/templates/web/base/cabezote.html
+++ b/templates/web/base/cabezote.html
@@ -16,4 +16,6 @@
         </div>
     </div>
 </div>
-{% botones_soluciones %}
+<div class="pl-3 pr-3 pl-sm-0 pr-sm-0">
+    {% botones_soluciones %}
+</div>
