--- a/templates/web/clientes.html
+++ b/templates/web/clientes.html
@@ -1,6 +1,6 @@
 {% load static %}
-<section id="clientes" class="section">
-    <div class="container-fluid background-white">
+<section id="clientes" class="section background-white pt-4">
+    <div class="container-fluid">
         <div class="container py-3" id="opinions">
             <h1 class="text-center mt-3 mb-3 font-up font-bold grey-text-2 wow fadeIn" data-wow-delay="0.2s">
                 CLIENTES</h1>
