--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -49,11 +49,9 @@
 <!-- Bootstrap tooltips -->
 <script type="text/javascript" src="{% static 'web/js/popper.min.js' %}"></script>
 <!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="{% static 'web/js/bootstrap.js' %}"></script>
+<script type="text/javascript" src="{% static 'web/js/bootstrap.min.js' %}"></script>
 <!-- MDB core JavaScript -->
 <script type="text/javascript" src="{% static 'web/js/mdb.min.js' %}"></script>
-
-<script src="https://maps.google.com/maps/api/js"></script>
 
 <script>
     $(function () {
