--- a/templates/web/base/footer.html
+++ b/templates/web/base/footer.html
@@ -10,7 +10,25 @@
                 <p>{{ general_configuracion.correos_contacto|safe }}</p>
             </div>
             <div class="col-12 col-md-6 col-lg-3 mt-2">
-                <div id="map-container" class="z-depth-1" style="height: 200px"></div>
+                <div id="map-container" class="z-depth-1" style="height: 200px">
+                </div>
+                <script>
+                    function initMap() {
+                        var uluru = {lat: 3.4640488, lng: -76.5130326};
+                        var map = new google.maps.Map(document.getElementById('map-container'), {
+                            zoom: 15,
+                            center: uluru
+                        });
+                        var marker = new google.maps.Marker({
+                            position: uluru,
+                            map: map
+                        });
+                    }
+                </script>
+                <script async defer
+                        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnHDS9_MmBdyoGZgKYTkqb2C5ii6lvFaU&callback=initMap">
+                </script>
+
                 <p class="text-center"><i class="fa fa-map-marker"
                                           aria-hidden="true"></i> {{ general_configuracion.direccion }}</p>
             </div>
