--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -9,8 +9,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Odecopack - {% block title %}{% endblock %}</title>
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/3ea6471209.css">
-
+    <link rel="stylesheet" href="{% static 'web/css/font-awesome.min.css' %}">
     <!-- Bootstrap core CSS -->
     <link href="{% static 'web/css/bootstrap.min.css' %}" rel="stylesheet">
     <!-- Material Design Bootstrap -->
