--- a/templates/web/base/menu.html
+++ b/templates/web/base/menu.html
@@ -3,7 +3,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg bg-odecopack scrolling-navbar">
     <a class="navbar-brand" href="#">
-        <img width="210px" src="{% static 'web/img/logo-odecopack.png' %}" alt="">
+        <img width="210px" src="{% static 'web/img/logo-odecopack2.png' %}" alt="">
     </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
